syntax = "proto3";

package ydbcp.v1alpha1;
option go_package = "github.com/ydb-platform/ydbcp/pkg/proto/ydbcp/v1alpha1;ydbcp";

import "google/protobuf/timestamp.proto";

enum BackupField {
    DATABASE_NAME = 0;
    STATUS = 1;
    CREATED_AT = 2;
    EXPIRE_AT = 3;
    COMPLETED_AT = 4;
}

message Backup {
    enum Status {
        STATUS_UNSPECIFIED = 0;
        PENDING = 1;
        AVAILABLE = 2;
        ERROR = 3;
        CANCELLED = 4;
        DELETED = 5;
        RUNNING = 6;
        DELETING = 7;
    }
    string id = 1;
    string container_id = 2;
    string database_name = 3;
    string database_endpoint = 4;
    S3Location location = 5;
    AuditInfo audit = 6;
    int64 size = 7;
    Status status = 8;
    string message = 9;
    google.protobuf.Timestamp expire_at = 10;
    string schedule_id = 11;
    repeated string source_paths = 12;
}

message S3Location {
    string endpoint = 1;
    string bucket = 2;
    string region = 3;
    string path_prefix = 4;
}

message AuditInfo {
    string creator = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp completed_at = 3;
}
